# uq-for-al-on-graphs

./: LICENSE  README.md  main.py  pyproject.toml  setup.py
config/: main.yaml
config/acquisition_strategy/: age.yaml  aleatoric_propagated.yaml  aleatoric_unpropagated.yaml  anrmab.yaml  appr.yaml  approximate_uncertainty.yaml  approximate_uncertainty_esp.yaml  approximate_uncertainty_mp.yaml  badge.yaml  balanced.yaml  best_split.yaml  best_split_ordered.yaml  coreset_appr_propagated.yaml  coreset_input_features_propagated.yaml  coreset_input_features_unpropagated.yaml  coreset_propagated.yaml  coreset_unpropagated.yaml  degree.yaml  energy_propagated.yaml  energy_unpropagated.yaml  epistemic_propagated.yaml  epistemic_unpropagated.yaml  evidence_propagated.yaml  evidence_unpropagated.yaml  feat_prop.yaml  galaxy.yaml  geem.yaml  oracle.yaml  random.yaml  seal.yaml  uncertainty_difference.yaml
config/data/: amazon_computers.yaml  amazon_photos.yaml  base_sbm_12.yaml  citeseer.yaml  cora_ml.yaml  csbm_1000_4.yaml  csbm_100_7.yaml  default_likelihood_cache.yaml  ogbn_arxiv.yaml  pubmed.yaml  reddit.yaml  sbm.yaml  sbm_12.yaml  sbm_12_fixed_seed.yaml  sbm_12_strong_signal.yaml  sbm_fixed_seed_100.yaml  sbm_fixed_seed_12.yaml  sbm_fixed_seed_12_strong_signal.yaml  sbm_toy_10_with_hubs.yaml  sbm_toy_12_with_2_layers.yaml  sbm_toy_12_with_hubs.yaml  sbm_toy_8_with_hubs.yaml  sbm_toy_9_with_2_hubs.yaml  sbm_toy_9_with_2_layers.yaml  sbm_toy_9_with_2_periphery.yaml  sbm_toy_9_with_hubs.yaml  toy_sbm.yaml
graph_al/: __init__.py  active_learning.py  config.py  registry.py
(+117 files in other folders)
